[@carlosvalarezo] validates user login against db
