# server.js
@@ -5,6 +5,7 @@ const fs = require('fs');
 const swaggerTools = require('swagger-tools');
 const jsyaml = require('js-yaml');
 const express = require('express');
+const connectDB = require('./config/db');
 
 const https = require('https');
 const privateKey  = fs.readFileSync('sslcert/server.key', 'utf8');
@@ -12,13 +13,21 @@ const certificate = fs.readFileSync('sslcert/server.cert', 'utf8');
 
 const credentials = {key: privateKey, cert: certificate};
 
-
 const healthRoute = require('./routes/health');
+const userRoute = require('./routes/user');
+const loginRoute = require('./routes/login');
 
-const app = express();
 const PORT = process.env.PORT || 8443;
 
+connectDB();
+const app = express();
+
+app.use(express.json({extended: false}));
+app.use(express.urlencoded({extended: false}));
+
 app.use('/health', healthRoute);
+app.use('/user', userRoute);
+app.use('/login', loginRoute);
 
 // The Swagger document (require it, build it programmatically, fetch it from a URL, ...)
 const spec = fs.readFileSync(path.join(__dirname,'api/swagger.yaml'), 'utf8');
@@ -38,7 +47,6 @@ swaggerTools.initializeMiddleware(swaggerDoc, function (middleware) {
 
 });
 
-// app.listen(PORT, () => console.log(`Server running in port ${PORT}`));
 const httpsServer = https.createServer(credentials, app);
 
 httpsServer.listen(8443);
